--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,46 @@
+@import url('https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister');
 .container{
   display: flex;
   flex-flow: column;
   height: 100%;
   flex : 1;
 }
+@media only screen and (max-width: 948px) {
+  .ace_editor{
+    height: 450px !important;
+    font-size: 18px !important;
+  }
+}
+@media only screen and (max-width: 420px) {
+  .ace_editor{
+    font-size: 16px !important;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .ace_editor{
+    height: 400px !important;
+    font-size: 15px !important;
+  }
+}
 .nav{
+  font-family: 'Love Ya Like A Sister', cursive;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  padding : 10px;
 }
 .pull-right{
   display: flex;
   margin-right: auto;
   flex-direction: row;
   align-items: center;
-  font-size: 20px;;
+}
+.pull-right p{
+  font-size: 22px
 }
 .pull-right img{
   margin-right: 15px;
+  margin-left: 15px;
 }
 .fcontainer{
   display: flex;
@@ -40,16 +61,14 @@
 }
 .picker{
     padding: 10px;
-    margin:5px;
+    margin-right:5px;
     font-weight: bold;
     background-color: white;
     color: black;
     outline: none;
     border: 3px solid black;
-    font-size: 20px;
 }
 .picker option{
-    font-size: 15px;
     font-weight : lighter;
     background-color: white;
     color: black;
@@ -66,5 +85,6 @@
   justify-content: center;
 }
 .f1{
+  font-family: 'Love Ya Like A Sister', cursive;
   font-size: 22px;
 }
