--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,23 @@
   align-items: center;
   justify-content: center;
 }
+.but{
+  margin: 10px;
+  padding: 11px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-weight: bold;
+  background-color: white;
+  color: black;
+  border: none;
+  outline: none;
+  border: 3px solid black;
+}
+.but:active{
+  color: white;
+  background-color: black;
+  border: 3px solid black;
+}
 .fcontainer button{
   margin: 10px;
   padding: 11px;
@@ -83,6 +100,43 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+.popup{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 500;
+  width: 50%;
+  height: 30%;
+  position: fixed;
+  font-size: 20px;
+  top:20%;
+  left: 25%;
+  color: black;
+  background: white;
+  border-radius: 25px;
+  padding: 10px;
+  font-family: 'Love Ya Like A Sister', cursive;
+}
+@media only screen and (max-width : 930px) {
+  .popup{
+    font-size: 15px !important;
+  }
+}
+@media only screen and (max-width : 530px) {
+  .popup{
+    left: 20%;
+    width: 60% !important;
+    font-size: 15px !important;
+  }
+}
+@media only screen and (max-width : 410px) {
+  .popup{
+    left: 20%;
+    width: 60% !important;
+    font-size: 12px !important;
+  }
 }
 #gg{
   margin: 10px;
