--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,11 @@
   align-items: center;
   justify-content: center;
 }
+@media only screen and (max-width: 340px){
+  .f1{
+    font-size: 20px !important;
+  }
+}
 .popup{
   display: flex;
   flex-direction: column;
