--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister');
+@import url('https://fonts.googleapis.com/css?family=Bitter');
 .container{
   display: flex;
   flex-flow: column;
@@ -100,6 +101,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 @media only screen and (max-width: 340px){
   .f1{
@@ -122,7 +124,6 @@
   background: white;
   border-radius: 25px;
   padding: 10px;
-  font-family: 'Love Ya Like A Sister', cursive;
 }
 @media only screen and (max-width : 930px) {
   .popup{
@@ -170,4 +171,13 @@
 .f1{
   font-family: 'Love Ya Like A Sister', cursive;
   font-size: 22px;
+}
+.overlay{
+  font-family: 'Bitter', serif !important;
+  min-height: 100%;
+  overflow: auto;
+  width: 100%;
+  background-color: rgba(1,1,1,0.8);
+  position: fixed;
+  z-index: 500;
 }
